src/log-language/antlr-generated/LogParser.ts
// Generated from C:/Users/zeljk/Develop/star-realms-log-viewer/src/log-language/Log.g4 by ANTLR 4.13.1
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
	ATN,
	ATNDeserializer, DecisionState, DFA, FailedPredicateException,
	RecognitionException, NoViableAltException, BailErrorStrategy,
	Parser, ParserATNSimulator,
	RuleContext, ParserRuleContext, PredictionMode, PredictionContextCache,
	TerminalNode, RuleNode,
	Token, TokenStream,
	Interval, IntervalSet
} from 'antlr4';
import LogListener from "./LogListener.js";
import LogVisitor from "./LogVisitor.js";

// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class LogParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly RESOLVING_DISCARD = 11;
	public static readonly REDRAW_UP_TO = 12;
	public static readonly SHUFFLED_DISCARD_PILE_TO_FORM_NEW_DECK = 13;
	public static readonly REVEALED_EVENT = 14;
	public static readonly REFRESH_ALLY_INDICATORS = 15;
	public static readonly PLAY_ALL = 16;
	public static readonly NEW_AUTHORITY = 17;
	public static readonly IT_IS_NOW = 18;
	public static readonly TO_THE_TOP_OF_THE_DECK = 19;
	public static readonly TO_ON_TABLE_IMAGE = 20;
	public static readonly TO_HAND = 21;
	public static readonly NO_MORE_CARDS_TO_DISCARD = 22;
	public static readonly IS_SCRAPPING = 23;
	public static readonly IS_RETURNING = 24;
	public static readonly IS_NOT_SCRAPPING_ANY_CARDS = 25;
	public static readonly IS_NOT_DISCARDING_ANY_CARDS = 26;
	public static readonly IS_DISCARDING = 27;
	public static readonly HAS_WON_THE_GAME = 28;
	public static readonly ENDS_TURN = 29;
	public static readonly ABILITY_AVAILABLE = 30;
	public static readonly NEWLINE = 31;
	public static readonly INDENT = 32;
	public static readonly SPACE = 33;
	public static readonly COLOR_OPEN = 34;
	public static readonly COLOR_CLOSE = 35;
	public static readonly NUM = 36;
	public static readonly TRADE_CAP = 37;
	public static readonly SCRAPPING_CAP = 38;
	public static readonly SCRAPPED_CAP = 39;
	public static readonly REVEALED_CAP = 40;
	public static readonly RESOLVING_CAP = 41;
	public static readonly PLAYED_CAP = 42;
	public static readonly DREW_CAP = 43;
	public static readonly DISCARDING_CAP = 44;
	public static readonly DISCARDED_CAP = 45;
	public static readonly DISCARD_CAP = 46;
	public static readonly DESTROYED_CAP = 47;
	public static readonly COMBAT_CAP = 48;
	public static readonly CHOSE_CAP = 49;
	public static readonly CHANGED_CAP = 50;
	public static readonly AUTHORITY_CAP = 51;
	public static readonly ATTACKED_CAP = 52;
	public static readonly ADD = 53;
	public static readonly ACTIVATING = 54;
	public static readonly ACQUIRED = 55;
	public static readonly TURN = 56;
	public static readonly TO = 57;
	public static readonly SELECTING = 58;
	public static readonly IS = 59;
	public static readonly FOR = 60;
	public static readonly ENDS = 61;
	public static readonly CARDS = 62;
	public static readonly AND = 63;
	public static readonly WORD = 64;
	public static readonly CARDS2 = 65;
	public static readonly UNKNOWN = 66;
	public static readonly EOF = Token.EOF;
	public static readonly RULE_start = 0;
	public static readonly RULE_line = 1;
	public static readonly RULE_actionLine = 2;
	public static readonly RULE_action = 3;
	public static readonly RULE_playAllCardsAction = 4;
	public static readonly RULE_playOneCardAction = 5;
	public static readonly RULE_acquireCardAction = 6;
	public static readonly RULE_endTurnAction = 7;
	public static readonly RULE_attackPlayerAction = 8;
	public static readonly RULE_attackBaseAction = 9;
	public static readonly RULE_scrapSubjectCardAction = 10;
	public static readonly RULE_scrapObjectCardAction = 11;
	public static readonly RULE_noScrapObjectCardAction = 12;
	public static readonly RULE_discardCardAction = 13;
	public static readonly RULE_noDiscardCardAction = 14;
	public static readonly RULE_resolveDiscardAction = 15;
	public static readonly RULE_resolveDiscardAndRedrawAction = 16;
	public static readonly RULE_activateCardAction = 17;
	public static readonly RULE_choseAction = 18;
	public static readonly RULE_genericResolveAction = 19;
	public static readonly RULE_selectCardAction = 20;
	public static readonly RULE_returnCardAction = 21;
	public static readonly RULE_effectLine = 22;
	public static readonly RULE_effect = 23;
	public static readonly RULE_shuffledEffect = 24;
	public static readonly RULE_turnChangedEffect = 25;
	public static readonly RULE_cardToOwnerEffect = 26;
	public static readonly RULE_cardToOpponentEffect = 27;
	public static readonly RULE_sideEffect = 28;
	public static readonly RULE_drewCardsEffect = 29;
	public static readonly RULE_refreshedAllyIndicatorsEffect = 30;
	public static readonly RULE_scrappedCardEffect = 31;
	public static readonly RULE_noMoreCardsToDiscardEffect = 32;
	public static readonly RULE_discardedCardEffect = 33;
	public static readonly RULE_wonGameEffect = 34;
	public static readonly RULE_destroyedBaseEffect = 35;
	public static readonly RULE_revealedEventEffect = 36;
	public static readonly RULE_revealedEffect = 37;
	public static readonly RULE_acquiredToTheTopOfDeckEffect = 38;
	public static readonly RULE_acquiredToHandEffect = 39;
	public static readonly RULE_changedToOnTableImage = 40;
	public static readonly RULE_changedCardToCard = 41;
	public static readonly RULE_card = 42;
	public static readonly RULE_addTrade = 43;
	public static readonly RULE_addCombat = 44;
	public static readonly RULE_addAuthority = 45;
	public static readonly RULE_tradeChange = 46;
	public static readonly RULE_combatChange = 47;
	public static readonly RULE_authorityChange = 48;
	public static readonly RULE_discardChange = 49;
	public static readonly RULE_signedNum = 50;
	public static readonly RULE_word = 51;
	public static readonly literalNames: (string | null)[] = [ null, "'('", 
                                                            "':'", "')'", 
                                                            "'.'", "''s'", 
                                                            "'>'", "'<'", 
                                                            "'-'", "'==='", 
                                                            "'+'", "'Resolving Discard'", 
                                                            "'Redraw up to'", 
                                                            "'Shuffled discard pile to form new deck'", 
                                                            "'Revealed event'", 
                                                            "'Refresh ally indicators'", 
                                                            "'Play all'", 
                                                            "'New Authority'", 
                                                            "'It is now'", 
                                                            "'to the top of the deck'", 
                                                            "'to on-table image'", 
                                                            "'to hand'", 
                                                            "'no more cards to discard'", 
                                                            "'is scrapping'", 
                                                            "'is returning'", 
                                                            "'is not scrapping any cards'", 
                                                            "'is not discarding any cards'", 
                                                            "'is discarding'", 
                                                            "'has won the game'", 
                                                            "'ends turn'", 
                                                            "'ability available'", 
                                                            null, "'        '", 
                                                            null, null, 
                                                            "'</color>'", 
                                                            null, "'Trade'", 
                                                            "'Scrapping'", 
                                                            "'Scrapped'", 
                                                            "'Revealed'", 
                                                            "'Resolving'", 
                                                            "'Played'", 
                                                            "'Drew'", "'Discarding'", 
                                                            "'Discarded'", 
                                                            "'Discard'", 
                                                            "'Destroyed'", 
                                                            "'Combat'", 
                                                            "'Chose'", "'Changed'", 
                                                            "'Authority'", 
                                                            "'Attacked'", 
                                                            "'Add'", "'Activating'", 
                                                            "'Acquired'", 
                                                            "'turn'", "'to'", 
                                                            "'selecting'", 
                                                            "'is'", "'for'", 
                                                            "'ends'", "'cards'", 
                                                            "'and'", null, 
                                                            "'card(s)'" ];
	public static readonly symbolicNames: (string | null)[] = [ null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, null, 
                                                             null, "RESOLVING_DISCARD", 
                                                             "REDRAW_UP_TO", 
                                                             "SHUFFLED_DISCARD_PILE_TO_FORM_NEW_DECK", 
                                                             "REVEALED_EVENT", 
                                                             "REFRESH_ALLY_INDICATORS", 
                                                             "PLAY_ALL", 
                                                             "NEW_AUTHORITY", 
                                                             "IT_IS_NOW", 
                                                             "TO_THE_TOP_OF_THE_DECK", 
                                                             "TO_ON_TABLE_IMAGE", 
                                                             "TO_HAND", 
                                                             "NO_MORE_CARDS_TO_DISCARD", 
                                                             "IS_SCRAPPING", 
                                                             "IS_RETURNING", 
                                                             "IS_NOT_SCRAPPING_ANY_CARDS", 
                                                             "IS_NOT_DISCARDING_ANY_CARDS", 
                                                             "IS_DISCARDING", 
                                                             "HAS_WON_THE_GAME", 
                                                             "ENDS_TURN", 
                                                             "ABILITY_AVAILABLE", 
                                                             "NEWLINE", 
                                                             "INDENT", "SPACE", 
                                                             "COLOR_OPEN", 
                                                             "COLOR_CLOSE", 
                                                             "NUM", "TRADE_CAP", 
                                                             "SCRAPPING_CAP", 
                                                             "SCRAPPED_CAP", 
                                                             "REVEALED_CAP", 
                                                             "RESOLVING_CAP", 
                                                             "PLAYED_CAP", 
                                                             "DREW_CAP", 
                                                             "DISCARDING_CAP", 
                                                             "DISCARDED_CAP", 
                                                             "DISCARD_CAP", 
                                                             "DESTROYED_CAP", 
                                                             "COMBAT_CAP", 
                                                             "CHOSE_CAP", 
                                                             "CHANGED_CAP", 
                                                             "AUTHORITY_CAP", 
                                                             "ATTACKED_CAP", 
                                                             "ADD", "ACTIVATING", 
                                                             "ACQUIRED", 
                                                             "TURN", "TO", 
                                                             "SELECTING", 
                                                             "IS", "FOR", 
                                                             "ENDS", "CARDS", 
                                                             "AND", "WORD", 
                                                             "CARDS2", "UNKNOWN" ];
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"start", "line", "actionLine", "action", "playAllCardsAction", "playOneCardAction", 
		"acquireCardAction", "endTurnAction", "attackPlayerAction", "attackBaseAction", 
		"scrapSubjectCardAction", "scrapObjectCardAction", "noScrapObjectCardAction", 
		"discardCardAction", "noDiscardCardAction", "resolveDiscardAction", "resolveDiscardAndRedrawAction", 
		"activateCardAction", "choseAction", "genericResolveAction", "selectCardAction", 
		"returnCardAction", "effectLine", "effect", "shuffledEffect", "turnChangedEffect", 
		"cardToOwnerEffect", "cardToOpponentEffect", "sideEffect", "drewCardsEffect", 
		"refreshedAllyIndicatorsEffect", "scrappedCardEffect", "noMoreCardsToDiscardEffect", 
		"discardedCardEffect", "wonGameEffect", "destroyedBaseEffect", "revealedEventEffect", 
		"revealedEffect", "acquiredToTheTopOfDeckEffect", "acquiredToHandEffect", 
		"changedToOnTableImage", "changedCardToCard", "card", "addTrade", "addCombat", 
		"addAuthority", "tradeChange", "combatChange", "authorityChange", "discardChange", 
		"signedNum", "word",
	];
	public get grammarFileName(): string { return "Log.g4"; }
	public get literalNames(): (string | null)[] { return LogParser.literalNames; }
	public get symbolicNames(): (string | null)[] { return LogParser.symbolicNames; }
	public get ruleNames(): string[] { return LogParser.ruleNames; }
	public get serializedATN(): number[] { return LogParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(this, LogParser._ATN, LogParser.DecisionsToDFA, new PredictionContextCache());
	}
	// @RuleVersion(0)
	public start(): StartContext {
		let localctx: StartContext = new StartContext(this, this._ctx, this.state);
		this.enterRule(localctx, 0, LogParser.RULE_start);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 107;
			this._errHandler.sync(this);
			_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 104;
					this.match(LogParser.NEWLINE);
					}
					}
				}
				this.state = 109;
				this._errHandler.sync(this);
				_alt = this._interp.adaptivePredict(this._input, 0, this._ctx);
			}
			this.state = 113;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 11)) & ~0x1F) === 0 && ((1 << (_la - 11)) & 4229955617) !== 0) || ((((_la - 43)) & ~0x1F) === 0 && ((1 << (_la - 43)) & 4194303) !== 0)) {
				{
				{
				this.state = 110;
				localctx._line = this.line();
				localctx._lines.push(localctx._line);
				}
				}
				this.state = 115;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 119;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===31) {
				{
				{
				this.state = 116;
				this.match(LogParser.NEWLINE);
				}
				}
				this.state = 121;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public line(): LineContext {
		let localctx: LineContext = new LineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 2, LogParser.RULE_line);
		try {
			this.state = 124;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case 11:
			case 16:
			case 37:
			case 38:
			case 39:
			case 40:
			case 41:
			case 42:
			case 43:
			case 44:
			case 45:
			case 46:
			case 47:
			case 48:
			case 49:
			case 50:
			case 51:
			case 52:
			case 53:
			case 54:
			case 55:
			case 56:
			case 57:
			case 58:
			case 59:
			case 60:
			case 61:
			case 62:
			case 63:
			case 64:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 122;
				this.actionLine();
				}
				break;
			case 32:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 123;
				this.effectLine();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public actionLine(): ActionLineContext {
		let localctx: ActionLineContext = new ActionLineContext(this, this._ctx, this.state);
		this.enterRule(localctx, 4, LogParser.RULE_actionLine);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 126;
			this.action();
			this.state = 127;
			this.match(LogParser.NEWLINE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public action(): ActionContext {
		let localctx: ActionContext = new ActionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 6, LogParser.RULE_action);
		try {
			this.state = 147;
			this._errHandler.sync(this);
			switch ( this._interp.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				{
				this.state = 129;
				this.playAllCardsAction();
				}
				break;
			case 2:
				this.enterOuterAlt(localctx, 2);
				{
				this.state = 130;
				this.playOneCardAction();
				}
				break;
			case 3:
				this.enterOuterAlt(localctx, 3);
				{
				this.state = 131;
				this.acquireCardAction();
				}
				break;
			case 4:
				this.enterOuterAlt(localctx, 4);
				{
				this.state = 132;
				this.endTurnAction();
				}
				break;
			case 5:
				this.enterOuterAlt(localctx, 5);
				{
				this.state = 133;
				this.attackPlayerAction();
				}
				break;
			case 6:
				this.enterOuterAlt(localctx, 6);
				{
				this.state = 134;
				this.attackBaseAction();
				}
				break;
			case 7:
				this.enterOuterAlt(localctx, 7);
				{
				this.state = 135;
				this.scrapSubjectCardAction();
				}
				break;
			case 8:
				this.enterOuterAlt(localctx, 8);
				{
				this.state = 136;
				this.scrapObjectCardAction();
				}
				break;
			case 9:
				this.enterOuterAlt(localctx, 9);
				{
				this.state = 137;
				this.noScrapObjectCardAction();
				}
				break;
			case 10:
				this.enterOuterAlt(localctx, 10);
				{
				this.state = 138;
				this.discardCardAction();
				}
				break;
			case 11:
				this.enterOuterAlt(localctx, 11);
				{
				this.state = 139;
				this.noDiscardCardAction();
				}
				break;
			case 12:
				this.enterOuterAlt(localctx, 12);
				{
				this.state = 140;
				this.resolveDiscardAction();
				}
				break;
			case 13:
				this.enterOuterAlt(localctx, 13);
				{
				this.state = 141;
				this.resolveDiscardAndRedrawAction();
				}
				break;
			case 14:
				this.enterOuterAlt(localctx, 14);
				{
				this.state = 142;
				this.activateCardAction();
				}
				break;
			case 15:
				this.enterOuterAlt(localctx, 15);
				{
				this.state = 143;
				this.choseAction();
				}
				break;
			case 16:
				this.enterOuterAlt(localctx, 16);
				{
				this.state = 144;
				this.genericResolveAction();
				}
				break;
			case 17:
				this.enterOuterAlt(localctx, 17);
				{
				this.state = 145;
				this.selectCardAction();
				}
				break;
			case 18:
				this.enterOuterAlt(localctx, 18);
				{
				this.state = 146;
				this.returnCardAction();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public playAllCardsAction(): PlayAllCardsActionContext {
		let localctx: PlayAllCardsActionContext = new PlayAllCardsActionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 8, LogParser.RULE_playAllCardsAction);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 149;
			this.match(LogParser.PLAY_ALL);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public playOneCardAction(): PlayOneCardActionContext {
		let localctx: PlayOneCardActionContext = new PlayOneCardActionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 10, LogParser.RULE_playOneCardAction);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 151;
			this.match(LogParser.PLAYED_CAP);
			this.state = 152;
			this.card();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public acquireCardAction(): AcquireCardActionContext {
		let localctx: AcquireCardActionContext = new AcquireCardActionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 12, LogParser.RULE_acquireCardAction);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 154;
			this.match(LogParser.ACQUIRED);
			this.state = 155;
			this.card();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public endTurnAction(): EndTurnActionContext {
		let localctx: EndTurnActionContext = new EndTurnActionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 14, LogParser.RULE_endTurnAction);
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 157;
			localctx._player = this.word();
			this.state = 158;
			this.match(LogParser.ENDS_TURN);
			this.state = 159;
			localctx._turn = this.match(LogParser.NUM);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return localctx;
	}
	// @RuleVersion(0)
	public attackPlayerAction(): AttackPlayerActionContext {
		let localctx: AttackPlayerActionContext = new AttackPlayerActionContext(this, this._ctx, this.state);
		this.enterRule(localctx, 16, LogParser.RULE_attackPlayerAction);
		let _la: number;
		try {
			this.enterOuterAlt(localctx, 1);
			{
			this.state = 161;
			this.match(LogParser.ATTACKED_CAP);
			this.state = 162;
			localctx._targetPlayer = this.word();
			this.state = 163;
			this.match(LogParser.FOR);
			this.state = 164;
			localctx._damage = this.match(LogParser.NUM);
			this.state = 165;
			this.match(LogParser.T__0);
			this.state = 166;
			this.match(LogParser.NEW_AUTHORITY);
			this.state = 168;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===2) {
				{
				this.state = 167;
				this.match(LogParser.T__1);
				}
			}
